argocd/k8s/nginx-example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-example-service
  namespace: nginx-example
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
