argocd/k8s/nginx-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-example-ingress
  namespace: nginx-example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - nginx.homelab.dobson.dev
    secretName: nginx-tls
  rules:
  - host: nginx.homelab.dobson.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-example-service
            port:
              number: 80
